# spock

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
spock/: Cargo.toml  README.md  build.rs
spock/examples/: compile_shader.rs  compute_image_invert.rs  device_info.rs  fill_buffer.rs  textured_quad.rs  windowed_triangle.rs
spock/examples/shaders/: invert_image.comp  invert_image.spv  textured_quad.wgsl
spock/src/: lib.rs  tests.rs  unit_tests.rs
spock/src/raw/: loader.rs  mod.rs  result.rs
spock/src/safe/: buffer.rs  command.rs  debug.rs  descriptor.rs  device.rs  image.rs  instance.rs  memory.rs  mod.rs  naga.rs  physical.rs  shader.rs  surface.rs  sync.rs
spock/src/safe/allocator/: linear.rs  mod.rs
spock/tests/: fetch_spec_test.rs  real_vulkan_test.rs  safe_wrapper_test.rs
vulkan_gen/: Cargo.toml  README.md  output.txt
vulkan_gen/src/: lib.rs  vulkan_spec_parser.rs
vulkan_gen/src/codegen/: assembler.rs  logging.rs  mod.rs  provisional.rs  type_integration.rs
vulkan_gen/src/codegen/generator_modules/: const_gen.rs  device_features_gen.rs  enum_gen.rs  extensions_builder_gen.rs  extensions_gen.rs  features_gen.rs  function_gen.rs  includes_gen.rs  macros_gen.rs  mod.rs  platforms_gen.rs  safe_commands_gen.rs  safe_ergonomic_gen.rs  safe_handles_gen.rs  struct_gen.rs  tags_gen.rs  type_gen.rs
vulkan_gen/src/parser/: mod.rs  tree_parser.rs  vk_types.rs
vulkan_gen/tests/: functions_json_writer_integration.rs  integration_tests.rs  json_writer_integration.rs  simple_json_test.rs
vulkane/: Cargo.toml  README.md  build.rs
vulkane/examples/: allocator_compute.rs  buffer_upload.rs  compile_shader.rs  compute_image_invert.rs  compute_square.rs  deferred_shading.rs  depth_prepass.rs  derive_vertex.rs  device_info.rs  external_memory_export.rs  fill_buffer.rs  headless_triangle.rs  instanced_mesh.rs  raw_interop.rs  ray_tracing_as_build.rs  shadow_map.rs  textured_quad.rs  windowed_triangle.rs
vulkane/src/: lib.rs  tests.rs  unit_tests.rs
vulkane/tests/: extension_pnext_test.rs  fetch_spec_test.rs  generator_live_device_test.rs  naga_test.rs  raytracing_test.rs  real_vulkan_test.rs  (+4 more)
vulkane_derive/: Cargo.toml
vulkane_derive/src/: lib.rs
(+45 files in other folders)
